svg filter bug in webkit where theme change does not change svg - was not normalizing user input with lowercase and trim which caused issues on mobile with case sensitivity and extra spaces etc - added a timeout to the scroll text node to avoid it getting killed by the focus changes

--- a/static/stylesheets/_game-menu-bar.scss
+++ b/static/stylesheets/_game-menu-bar.scss
@@ -8,6 +8,7 @@
   background-color: var(--menu_bar_color);
   > svg {
     filter: var(--svg-filter);
+    -webkit-filter: var(--svg-filter);
     margin-left: .5rem;
     margin-right: 1rem;
     width: 3rem;
